# legerbeeps

./: HISTORY.md  README.md  pyproject.toml
src/legerbeep/: cli.py  generator.py
